# todo-qt

./: .gitmodules  CMakeLists.txt  Controller.cpp  Controller.h  MainWindow.cpp  MainWindow.h  Observer.h  README.md  Serializable.h  Subject.h  Todo.cpp  Todo.h  TodoController.cpp  TodoController.h  TodoEditDialog.cpp  TodoEditDialog.h  TodoList.cpp  TodoList.h  TodoListQAbstractTableModelAdapter.cpp  TodoListQAbstractTableModelAdapter.h  TodoListWidget.cpp  TodoListWidget.h  TodoTableView.cpp  TodoTableView.h  TodoWidget.cpp  TodoWidget.h  main.cpp
test/: CMakeLists.txt  run_all_tests.cpp  test_controller_class.cpp  test_todo_class.cpp  test_todolist_class.cpp
